# python-namespaced-packages-examples

./: .gitignore  README.md  pyproject.toml
poetry-example/: README.md
setuptools+pip-example/: Dockerfile  README.md  requirements-dev.txt  requirements-test.txt
setuptools+pip-example/src/pack-a/: README.md  pyproject.toml
setuptools+pip-example/src/pack-a/src/myorg/pack_a/: __init__.py  mymodule.py
setuptools+pip-example/src/pack-a/tests/: test_pack_a.py
setuptools+pip-example/src/pack-b/: README.md  pyproject.toml  requirements.txt  setup.py
setuptools+pip-example/src/pack-b/tests/: test_pack_b.py
setuptools+pip-example/src/pack-c/: README.md
setuptools+pip-example/src/pack-d/: README.md  pyproject.toml
setuptools+pip-example/src/pack-e/: README.md
setuptools+pip-example/src/pack-f/: README.md
setuptools+pip-example/src/pack-g/: README.md
